--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/artem-prygin/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/artem-prygin/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/artem-prygin/frontend-project-lvl1#readme",
+  "dependencies": {
+    "promptly": "^3.0.3"
+  }
 }
