--- a/.github/workflows/linter-actions.yml
+++ b/.github/workflows/linter-actions.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: npm install
-        # Install and build project
+        # Install project
         run: |
           make install
         # Add environment variables
