--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   },
   "homepage": "https://github.com/artem-prygin/frontend-project-lvl1#readme",
   "dependencies": {
+    "promptly": "^3.0.3"
+  },
+  "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "promptly": "^3.0.3"
+    "eslint-plugin-import": "^2.22.1"
   }
 }
